<?xml version="1.0"?>
<package format="3">
  <name>my_robot_bringup</name>
  <version>0.1.0</version>
  <description>Robot startup with Lidar and SLAM Toolbox (no odometry)</description>

  <maintainer email="dein@email.de">Dein Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

